fix scrollbar maybe

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -38,7 +38,16 @@ body {
       font-family: $extra-font;
     }
   
-    .App {display: flex;}
+    .App {display: flex;
+      &::-webkit-scrollbar {
+        // display: none;
+        width: 0 !important;
+      }
+      -ms-overflow-style: none;
+      scrollbar-width: none; 
+      // dark-mode-test
+      // background-color: $dark-gray;
+    }
 
     .main {
       width: calc(100vw - 4.5rem);
